--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="card card-centered">
                         <div class="card-body">
                             <div class="centered mb-5">
-                                <img alt="Shopblocks" src="/assets/img/logo.png" style="width: 40px; filter: invert(1);">
+                                <img alt="Shopblocks" src="assets/img/logo.png" style="width: 40px; filter: invert(1);">
                                 <span class="badge">Server Status</span>
                             </div>
                             <div id="tooltip" class="tooltip" style="opacity: 0">
