--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Shopblocks - Service Status</title>
     </head>
     <body>
-        <div class="container fluid">
+        <div class="container fluid" style="max-width: 1048px;">
             <div class="row">
                 <div class="col">
                     <div class="card card-centered">
