--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="alternate icon" href="assets/img/logo.ico">
         <link href="assets/css/normalize.css" rel="stylesheet">
         <link href="assets/css/rocket.css" rel="stylesheet">
 
