Fixing issue with $upTime showing

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <a class="link-muted" href="$url" target="_blank">$url</a>
-                <small class="u-pull-right text-muted">$upTime in the last <span id="max-days"></span> days</small>
+                <small class="u-pull-right text-muted">$upTime in the last 30 days</small>
             </div>
             <div id="status-square" class="status-square $color" data-status="$color"></div>
             <div id="status-line" class="status-line"></div>
