Adding some pwa stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="alternate icon" href="assets/img/logo.ico">
         <link href="assets/css/normalize.css" rel="stylesheet">
         <link href="assets/css/rocket.css" rel="stylesheet">
+        <link rel="manifest" href="manifest.webpackmanifest">
 
         <title>Shopblocks - Service Status</title>
     </head>
@@ -50,6 +51,7 @@
         </div>
     </body>
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/sw.js"></script>
     <script>
         genAllReports();
     </script>
