--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </body>
     <script src="assets/js/app.js"></script>
-    <script src="assets/js/sw.js"></script>
+    <script src="sw.js"></script>
     <script>
         genAllReports();
     </script>
