Registering service worker

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
     <script src="assets/js/app.js"></script>
     <script src="sw.js"></script>
     <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register('/sw.js').then(function (registration) {
+                   console.log('Registered Service Worker Successfully!', registration.scope);
+                }, function (error) {
+                    console.log('Failed to register Service Worker!', error)
+                });
+            });
+        }
+
         genAllReports();
     </script>
 </html>
